# MenuMusicToggle

./: CMakeLists.txt  README.md  curly-eureka.lnk
geode/: about.md  changelog.md
geode/release/: user95401.MenuMusicToggle.geode
src/: VersionInfo1.rc  _main.cpp  main.cpp  version.rc
